<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<com.google.android.material.materialswitch.MaterialSwitch xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/switchView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:checked="true" />
