...
    android:layout_height="@dimen/default_height_for_click"
    android:foreground="?android:attr/selectableItemBackground"
    android:paddingStart="@dimen/default_margin_content_small"
    android:paddingEnd="@dimen/default_margin_content_small">

    <ImageView
        android:id="@+id/imageViewPgp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pgp_details_badge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
