<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/ScreenHeading"
            android:text="@string/set_up_flow_crypt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/layoutSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top_found_backup"
            android:orientation="horizontal"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

            <TextView
                android:id="@+id/textViewSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/default_text_size_medium"
                tools:text="No backups found on this account" />

            <ImageButton
                android:id="@+id/imageButtonHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/see_choosing_secure_pass_phrases"
                app:srcCompat="@mipmap/ic_help_grey" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content"
            android:layout_marginBottom="@dimen/default_margin_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/layoutPasswordHint"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/layoutSubTitle"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/layoutPasswordHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_key_password"
            android:orientation="horizontal"
            android:paddingStart="@dimen/default_four_dip"
            android:paddingEnd="@dimen/default_four_dip"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/layoutSubTitle">

            <TextView
                style="@style/TextAppearance.Design.Hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/enter_your_pass_phrase" />

            <ImageButton
                android:id="@+id/imageButtonPasswordHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/see_choosing_secure_pass_phrases"
                app:srcCompat="@mipmap/ic_help_grey" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutKeyPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:counterEnabled="false"
            app:errorEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/layoutPasswordHint"
            app:passwordToggleContentDescription="description"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextKeyPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/rGPassphraseType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content_small"
            android:checkedButton="@+id/rBStoreLocally"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutKeyPassword">

            <RadioButton
                android:id="@+id/rBStoreLocally"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_pass_phrase" />

            <RadioButton
                android:id="@+id/rBStoreInRAM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_pass_phrase_temporarily" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonPositiveAction"
            style="@style/AppWidget.Button"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_top_load_account"
            android:theme="@style/AppWidget.Button.Green"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/rGPassphraseType"
            tools:text="Load Account" />

        <Button
            android:id="@+id/buttonSkipRemainingBackups"
            style="@style/AppWidget.Button"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_top_load_account"
            android:text="@string/skip_remaining_backups"
            android:theme="@style/AppWidget.Button.Green"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/buttonPositiveAction" />

        <Button
            android:id="@+id/buttonNegativeAction"
            style="@style/AppWidget.Button"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_top_button_select_another_account"
            android:layout_marginBottom="@dimen/margin_top_button_select_another_account"
            android:theme="@style/AppWidget.Button.White"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/buttonSkipRemainingBackups"
            tools:text="@string/use_another_account" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/padding_guideline_setup_screen" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/padding_guideline_setup_screen" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
