<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
