...

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonTryToConnect"
            style="@style/AppWidget.Button"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_top_load_account"
            android:text="@string/try_to_connect"
            android:theme="@style/AppWidget.Button.Green"
            app:layout_constraintHorizontal_bias="0.0"
...
